# banking-management-system

./: CMakeLists.txt  README.md  main  main.c
include/: account.h  menu.h  utils.h
src/: account.c  main.c  menu.c  utils.c
